k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invest-inference
  namespace: mlops
  labels:
    app: invest-inference
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invest-inference
  template:
    metadata:
      labels:
        app: invest-inference
    spec:
      containers:
      - name: invest-inference
        image: 891376975666.dkr.ecr.ap-northeast-2.amazonaws.com/invest-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "2"
            memory: "4Gi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 30
          failureThreshold: 3
